# AI_Flashcards

./: .clang-tidy  .cppcheck-suppressions  .gitignore  CMakeLists.txt  README.md  context_merger.py  into_container.sh  project_context.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
data/: list1-5.json  testowa_lista_root.json
data/Angielski/: Business_Vocab.json  Irregular_Verbs.json
data/Koreański/: Podstawy_Hangul.json  full.json
docs/: A_Project_Charter_AI_Flashcards.md  Roadmap.md  changes.md  m02_json_storage_prompt.md  m03_a_01_UI_entry.md  m03_a_02_UI_entry.md  m03_a_03_UI_entry.md  spec Milestone 1.md  spec Milestone 2.md  spec Milestone 3 Finalizacja (TUI - UX).md  spec Milestone 3.md  spec Milestone 4.md
import/: koreański, słówka.csv  koreański, słówka.ods  koreański, słówka.xlsx  słówka_01.csv  słówka_02.csv
include/app/: AppController.hpp  AppState.hpp
include/app/localization/: English.hpp  Localization.hpp  LocalizationData.hpp  LocalizedText.hpp  Polish.hpp
include/app/model/: BrowserItem.hpp  DeckEditorViewModel.hpp  ListsBrowserViewModel.hpp  StudyConfigViewModel.hpp  StudySessionViewModel.hpp
include/app/presenters/: DeckEditorPresenter.hpp  ListsBrowserPresenter.hpp  StudyConfigPresenter.hpp  StudySessionPresenter.hpp
include/app/utils/: AppUtils.hpp  BackupUtils.hpp
include/app/views/: FtxuiDeckEditorView.hpp  FtxuiListsBrowserView.hpp  FtxuiStudyConfigView.hpp  FtxuiStudySessionView.hpp  IDeckEditorView.hpp  IListsBrowserView.hpp  IStudyConfigView.hpp  IStudySessionView.hpp  IView.hpp  ViewTheme.hpp  ViewUtils.hpp
include/core/: CardId.hpp  DeckManager.hpp  FileTypeConstants.hpp  Flashcard.hpp  FlashcardList.hpp  IDeckManager.hpp  IStorage.hpp  StudySession.hpp  UndoManager.hpp
include/storage/: JsonMappers.hpp  JsonSchema.hpp  JsonStorage.hpp
scripts/: analyze.sh  build.ps1  build.sh  build_and_test.ps1  build_and_test.sh  clean.ps1  clean.sh  run.ps1  run.sh  trim_trailing.sh
src/: DeckManager.cpp  FlashcardList.cpp  JsonStorage.cpp  StudySession.cpp  main.cpp
src/app/: AppController.cpp
src/app/presenters/: DeckEditorPresenter.cpp  ListsBrowserPresenter.cpp  StudyConfigPresenter.cpp  StudySessionPresenter.cpp
src/app/views/: FtxuiDeckEditorView.cpp  FtxuiListsBrowserView.cpp  FtxuiStudyConfigView.cpp  FtxuiStudySessionView.cpp
tests/: DeckManager_test.cpp  FlashcardList_test.cpp  JsonMappers_test.cpp  JsonStorage_test.cpp  StudySession_test.cpp  UndoManager_test.cpp  test_main.cpp
tests/app/: AppController_test.cpp
tests/app/model/: ListsBrowserViewModel_test.cpp  StudyConfigViewModel_test.cpp
tests/app/presenters/: DeckEditorPresenter_test.cpp  ListsBrowserPresenter_test.cpp  StudyConfigPresenter_test.cpp  StudySessionPresenter_test.cpp
tests/app/utils/: TestFactory.hpp
